# NewFrontiersEngine

./: .gitignore  CMakeLists.txt  README.md
Engine/Source/Editor/EditorCore/Private/: EditorMain.cpp  main.cpp
Engine/Source/Editor/EditorCore/Public/: EditorMain.h
Engine/Source/Editor/EditorFramework/Private/: EditorError.cpp  EditorMenu.cpp  EditorViewport.cpp
Engine/Source/Editor/EditorFramework/Public/: EditorError.h  EditorMenu.h  EditorViewport.h
Engine/Source/Editor/General/: nf_error.h
Engine/Source/Editor/OpenGL/Private/: EditorOpenGLWidget.cpp
Engine/Source/Editor/OpenGL/Public/: EditorOpenGLWidget.h
Engine/Source/Runtime/RendererCore/Private/: Shader.cpp
Engine/Source/Runtime/RendererCore/Public/: Shader.h
